# cloudrun_flask_document_app

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yml  docker_commands.txt  pyproject.toml  requirements.txt
