[tool.poetry]
name = "flask-poetry"
version = "0.1.0"
description = "flask-app"
authors = ["Rushideep <k.rushi1222@gmail.com>"]
license = "MIT"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3"
flask-cors = "^6.0.0"
python-docx = "^1.1.2"
pymupdf = "^1.26.0"
tiktoken = "^0.9.0"
langchain-openai = "^0.3.18"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
